<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DC9898"
    tools:context=".PlatChoisiActivity">

    <TextView
        android:id="@+id/choixPlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/red_border"
        android:text="@string/nbPrice"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/detailPlat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/red_border"
        android:text="@string/composition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choixPlat"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailPlat"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nbPrix"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintVertical_bias="0.225" />

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/imagedetail"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        app:layout_constraintBottom_toTopOf="@+id/detailPlat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bleu" />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="39dp"
        android:layout_height="43dp"
        android:layout_marginTop="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toEndOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/detailPlat"
        app:srcCompat="@android:drawable/ic_media_next"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/moins"
        android:layout_width="39dp"
        android:layout_height="44dp"
        android:layout_marginTop="66dp"
        app:layout_constraintEnd_toStartOf="@+id/nombre"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailPlat"
        app:srcCompat="@android:drawable/ic_media_previous"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>